fixed font sizes and miss alignments

--- a/app/assets/stylesheets/dc21.sass
+++ b/app/assets/stylesheets/dc21.sass
@@ -57,8 +57,10 @@
       +inlineblock
     input[type=text]
       +m-p-w-h-p-t-b-l-r-f(0, "", 560px)
-input#from_date, input#to_date
+input#from_date, input#to_date, input#upload_from_date, input#upload_to_date,
   width: 70px
+#search_uploader_id
+  margin-left: 20px
 
 .searchactions
   +m-p-w-h-p-t-b-l-r-f("")
@@ -176,13 +178,15 @@ th.actions, td.actions
 
       label
         +m-p-w-h-p-t-b-l-r-f("", 10px 10px 10px 20px, 100px)
-        +font("", bold, 0.813em, 18px, $dark3, "", left)
+        +font("", bold, 12px, 18px, $dark3, "", left)
 
       input[type=text]
         +m-p-w-h-p-t-b-l-r-f("", "", 90px)
-        +font("", normal, 0.813em, 18px)
+        +font("", normal, 12px, 18px)
       input[type=text].year
         +m-p-w-h-p-t-b-l-r-f("", "", 30px)
+      select
+        +font("", normal, 12px, 18px)
 
       input[type=checkbox]
         +m-p-w-h-p-t-b-l-r-f(10px 0)
